# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .dockerignore  .gitignore  .nvimlog  Brewfile.tmpl  Dockerfile  Makefile  README.md  README.vn.md  ansible.cfg  dot_gitconfig-personal.tmpl  dot_gitconfig.tmpl  dot_p10k.zsh  dot_tmux.conf  dot_tool-versions  dot_zprofile.tmpl  dot_zshrc.tmpl  run_onchange_after_configure-vscode.sh.tmpl  run_onchange_after_install-fonts.sh.tmpl
.chezmoiscripts/: run_once_after_chsh.sh.tmpl  run_once_after_dock.sh.tmpl  run_once_after_ssh.sh.tmpl  run_once_before_homebrew.sh.tmpl  run_once_before_packages.sh.tmpl  run_onchange_after_git-configs.sh.tmpl
.github/workflows/: test.yml
docs/: devtools.md
dot_claude/: CLAUDE.md
dot_codex/: config.toml
dot_config/: starship.toml
dot_config/atuin/: config.toml
dot_config/mise/: config.toml
dot_config/nvim/: init.lua
dot_config/nvim/lua/hbb/: lazy.lua
dot_config/uv/: uv.toml
dot_devops-env/: README.md  dot_gitignore  pyproject.toml
dot_gemini/: settings.json
dot_zsh.d/: 10-env.zsh.tmpl  15-ssh-agent.zsh  20-navigation.zsh  30-git.zsh  40-node.zsh  50-docker.zsh  60-devops.zsh  70-python.zsh  80-modern-tools.zsh  90-linux.zsh.tmpl  90-macos.zsh.tmpl
scripts/: bootstrap-devops-env.sh  bootstrap.sh  setup-linux.sh  sync-tooling.sh  test-chezmoi.sh  test-docker.sh  validate-setup.sh
